--- a/css/style.scss
+++ b/css/style.scss
@@ -12,7 +12,7 @@
 }
 
 // Variables
-$primary-color: #9264ff;
+$primary-color: #ff6471;
 $secondary-color: #492aa7;
 $deep-color: #2e1760;
 $pink-color: #ff5bce;
