--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,7 @@ $secondary-color: #492aa7;
 $deep-color: #2e1760;
 $pink-color: #ff5bce;
 $primary-font: "poppins", sans-serif;
-$secondary-font: 'Serpentine', sans-serif;
+$secondary-font: 'serpentine', sans-serif;
 
 @mixin button {
   padding: 8px 20px;
