--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@
 }
 
 @font-face {
-  font-family: 'serpentine', sans-serif;
-  src: url("../fonts/Serpentine-Medium.otf");
+  font-family: 'serpentinemedium';
+  src: url("serpentine-medium-webfont.woff2") format("woff2"), url("serpentine-medium-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 html {
@@ -182,7 +184,7 @@ header .banner {
 
 header .banner h1 {
   font-size: 70px;
-  font-family: "serpentine", sans-serif;
+  font-family: "serpentinemedium";
 }
 
 header .banner h1::-moz-selection {
@@ -314,7 +316,7 @@ header .banner-img img {
 }
 
 .priceCard .rate span {
-  font-family: "serpentine", sans-serif;
+  font-family: "serpentinemedium";
   font-size: 21px;
 }
 
