--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: 'serpentinemedium';
-  src: url("serpentine-medium-webfont.woff2") format("woff2"), url("serpentine-medium-webfont.woff") format("woff");
+  src: url("../fonts/Serpentine-Medium.woff2") format("woff2"), url("../fonts/Serpentine-Medium.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -185,6 +185,7 @@ header .banner {
 header .banner h1 {
   font-size: 70px;
   font-family: "serpentinemedium";
+  font-weight: 100;
 }
 
 header .banner h1::-moz-selection {
