--- a/css/style.scss
+++ b/css/style.scss
@@ -8,8 +8,8 @@
 
 @font-face {
   font-family: 'serpentinemedium';
-  src: url('serpentine-medium-webfont.woff2') format('woff2'),
-       url('serpentine-medium-webfont.woff') format('woff');
+  src: url('../fonts/Serpentine-Medium.woff2') format('woff2'),
+       url('../fonts/Serpentine-Medium.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
@@ -173,6 +173,7 @@ header {
     h1 {
       font-size: 70px;
       font-family: $secondary-font;
+      font-weight: 100;
       &::selection {
         background-color: $primary-color;
       }
