--- a/css/style.scss
+++ b/css/style.scss
@@ -952,11 +952,14 @@ header {
 
 /* Max Width 490px */
 @media only screen and (max-width: 490px) {
+  .container{
+    padding: 0 30px;
+  }
   nav {
     padding: 15px 25px;
   }
   header {
-    padding: 50px 25px;
+    padding: 100px 25px;
     .banner h1 {
       font-size: 30px;
     }
@@ -983,5 +986,9 @@ header {
     hr {
       width: 180px;
     }
+  }
+  #contact .footer-right .contact-form{
+    padding: 25px;
+    border-radius: 10px;
   }
 }
