--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,6 @@
           box-sizing: border-box;
 }
 
-@font-face {
-  font-family: 'serpentinemedium';
-  src: url("../fonts/Serpentine-Medium.woff2") format("woff2"), url("../fonts/Serpentine-Medium.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
 html {
   scroll-behavior: smooth;
 }
@@ -184,8 +177,9 @@ header .banner {
 
 header .banner h1 {
   font-size: 70px;
-  font-family: "serpentinemedium";
-  font-weight: 100;
+  font-family: "Georama", sans-serif;
+  font-weight: 900;
+  letter-spacing: 2px;
 }
 
 header .banner h1::-moz-selection {
@@ -322,7 +316,7 @@ header .banner-img img {
 }
 
 .priceCard .rate span {
-  font-family: "serpentinemedium";
+  font-family: "Georama", sans-serif;
   font-size: 21px;
 }
 
